<resources>

    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_detail">Detail Event</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image_logo">Gambar</string>
    <string name="register_button">Register</string>

</resources>