<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_upcoming_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_finished_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.dicodingevent.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"/>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.dicodingevent.ui.setting.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting"/>

</navigation>